<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgtest2"
    tools:context=".common.loginactivity.user.userLogin">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="267dp"
        android:layout_height="215dp"
        android:padding="50dp"
        android:elevation="2dp"
        android:src="@drawable/loopxlogoblack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="310dp"
        android:layout_height="32dp"
        android:text="@string/welcome_to_salonx"
        android:textAlignment="center"
        android:textColor="#00003f"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="364dp"

        android:layout_height="279dp"
        android:background="@drawable/cell4"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toTopOf="@+id/txtsgn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:layout_constraintVertical_bias="0.148">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phones"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:elevation="25dp"
            android:hint="@string/phone_no"
            android:textColorHint="#000000"
            app:boxStrokeColor="#000000"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="#000000"
            app:hintTextColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo"
            app:layout_constraintVertical_bias="0.55"
            app:startIconDrawable="@drawable/ic_mob"
            app:startIconTint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="@+id/salonName"
                app:layout_constraintStart_toStartOf="@+id/salonName"
                tools:layout_editor_absoluteY="291dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:elevation="25dp"
            android:hint="@string/password"
            android:textColorHint="#000000"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/salonName"
            app:layout_constraintVertical_bias="0.2"
            app:startIconDrawable="@drawable/ic_pass"
            app:startIconTint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:elevation="20dp"
            android:text="@string/forgot_password"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="0.4" />

        <Button
            android:id="@+id/button2"
            android:layout_width="303dp"
            android:layout_height="72dp"
            android:layout_marginBottom="188dp"
            android:backgroundTint="@color/colorPrimary"
            android:elevation="25dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#ffff"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:layout_constraintVertical_bias="1.0" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_registered_yet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/txtsgn"
        android:layout_width="197dp"
        android:layout_height="64dp"
        android:layout_marginTop="400dp"
        android:backgroundTint="@color/colorPrimary"

        android:text="@string/signup"
        android:textColor="#fffF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <com.agrawalsuneet.dotsloader.loaders.LazyLoader
        android:visibility="invisible"
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lazyloader_animDur="800"
        app:lazyloader_dotsDist="10dp"
        app:lazyloader_dotsRadius="16dp"
        app:lazyloader_firstDelayDur="150"
        app:lazyloader_firstDotColor="@color/colorPrimary"
        app:lazyloader_interpolator="@android:anim/decelerate_interpolator"
        app:lazyloader_secondDelayDur="300"
        app:lazyloader_secondDotColor="@color/colorPrimary"
        app:lazyloader_thirdDotColor="@color/colorPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>